# ldbm-image-background-remover

./: CMakeLists.txt  LICENSE  README.md  README.zh-cn.md
src/: LDBM.cpp  LDBM.h  main.cpp
